<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MashRegisterPlus</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="textPrice">Price:</string>
    <string name="defaultPriceValue">5</string>
    <string name="defaultValueMerchantId">12345678</string>
    <string name="merchantId">Merchant ID:</string>
    <string name="payButtonText">Pay with intent</string>
    <string name="CompanyName">Monet+ a.s.</string>
    <string name="TextBTAddr">BT addr:</string>
    <string name="testedBTHWAddress"></string>
    <string name="select_device">Select device</string>
    <string name="text_currency">Currency:</string>
    <string name="text_invoice">Invoice:</string>
    <string name="text_invoice_default_value">1234567890</string>
    <string name="text_tranid_default_value">1234567890</string>
    <string name="dotransactionhandshake">Handshake</string>
    <string name="dotransactionbalancing">Balancing</string>
    <string name="dotransactionpay">Pay</string>
    <string name="terminal_result">Result from terminal</string>
    <string name="infoButtonText">Terminal info</string>
    <string name="doRecharging">EMV dobití</string>
    <string name="text_invoice_tranid">Inv/Tran:</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="host">Host</string>
    <string name="mbca">MBCA</string>
    <string name="mvta">MVTA</string>
    <string name="servis">Servis</string>
    <string name="smartShop">Smart Shop</string>
    <string name="smartshopParametersCall">Parameters</string>
    <string name="doreturn">Návrat</string>
    <string name="docardstate">Stav karty</string>
    <string name="button_close">Close</string>
    <string name="title_printer">Printer</string>
    <string name="default_select_device">00:00:00:00:00:00</string>
    <string name="default_terminal_name">POP-3E-5A-82</string>
    <string name="hint_terminal_name">Terminal name</string>
    <string name="button_getpin">GetPin</string>
    <string name="title_bt_enabled">BT enabled</string>
    <string name="title_tcp_enabled">TCP enabled</string>
    <string name="lasttran">LastTran</string>
    <string name="text_invoice_ticket">Inv/Ticket</string>
    <string name="text_ticket_number_default_value">A123B123C123D123</string>
    <string name="dotransactionrecharging">Recharging</string>
    <string name="maitenanceupdate">MaitenanceUpdate</string>

</resources>