<!--
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".PayBaseActivity" >
-->


<!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
-->


<!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:orientation="vertical"
    tools:context=".PayBaseActivity" >

    <ImageView
        android:id="@+id/imageHeader"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:contentDescription="@string/CompanyName"
        android:maxHeight="100dp"
        android:minHeight="100dp"
        android:scaleType="fitStart"
        android:src="@drawable/monetlogo" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textHardwareAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/TextBTAddr"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/textViewHw"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/testedBTHWAddress"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <Button
                    android:id="@+id/buttonHwSelect"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/select_device" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textPrice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minWidth="150dp"
                    android:text="@string/textPrice"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/editPrice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:text="@string/defaultPriceValue" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textCurrency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_currency"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Spinner
                    android:id="@+id/spinnerCurrency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textInvoice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_invoice"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/editTextInvoice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    android:maxLength="10"
                    android:text="@string/text_invoice_default_value" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <Button
                android:id="@+id/buttonInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoButtonText" />

            <Button
                android:id="@+id/buttonTransactionHandshake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dotransactionhandshake" />

            <Button
                android:id="@+id/buttonPayTransaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dotransactionpay" />

            <TextView
                android:id="@+id/textAnswer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/terminal_result"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </ScrollView>

</LinearLayout> <!-- </FrameLayout> -->
